# pickledb-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust-audit.yml  rust.yml
examples/: hello_world.rs  lists.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/lists/: Cargo.toml
examples/lists/src/: main.rs
src/: error.rs  extenders.rs  iterators.rs  lib.rs  pickledb.rs  serialization.rs
tests/: pickledb_advanced_tests.rs  pickledb_basic_tests.rs  pickledb_dump_policy_tests.rs  pickledb_error_tests.rs  pickledb_key_value_tests.rs  pickledb_list_tests.rs
tests/common/: mod.rs
