[package]
name = "pickledb"
version = "0.5.2"
authors = ["seladb <pcapplusplus@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A lightweight and simple key-value store written in Rust, heavily inspired by Python's PickleDB (https://pythonhosted.org/pickleDB/)"
repository = "https://github.com/seladb/pickledb-rs"
homepage = "https://github.com/seladb/pickledb-rs"
documentation = "http://docs.rs/pickledb"
keywords = ["database", "key-value-store", "db", "kv", "pickledb"]
categories = ["database-implementations", "data-structures"]
edition = "2018"

[badges]
travis-ci = { repository = "seladb/pickledb-rs" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = { version = "1.0", optional = true }
bincode = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
serde_cbor = { version = "0.11", optional = true }

[dev-dependencies]
rand = "0.6"
rstest = "0.2"
matches = "0.1"
fs2 = "0.4"

[features]
default = ["json"]
json = ["dep:serde_json"]
bincode = ["dep:bincode"]
yaml = ["dep:serde_yaml"]
cbor = ["dep:serde_cbor"]
# By default use the old iterators until the old liter()
# method is fully removed in a future version. For now the
# newer version will be opt-in.
list-iterator = []

[[example]]
name = "hello_world"
path = "examples/hello_world/src/main.rs"

[[example]]
name = "lists"
path = "examples/lists/src/main.rs"
